qimageblitz (1:0.0.6-3) UNRELEASED; urgency=low


 -- Modestas Vainius <modax@debian.org>  Sun, 13 Mar 2011 22:36:22 +0200

qimageblitz (1:0.0.6-2) unstable; urgency=low

  * Update libqimageblitz4.symbols for other arches, fixes FTBFSes.

 -- Modestas Vainius <modax@debian.org>  Sun, 19 Sep 2010 12:36:21 +0300

qimageblitz (1:0.0.6-1) unstable; urgency=low

  * New upstream release.
  * Bump debian/compat and debhelper build dependency to v7 (to get more
    sophisticated debian/tmp handling).
  * Switch from internal debian/cdbs/kde.mk to pkg-kde-tools:
    - build depend on pkg-kde-tools 0.4;
    - remove debian/cdbs directory;
    - replace debian/cdbs/kde.mk with
      /usr/share/pkg-kde-tools/qt-kde-team/1/debian-qt-kde.mk in debian/rules.
  * Add Vcs fields to debian/control.
  * Switch to debian source format 3.0 (quilt):
    - remove build dependency on quilt;
    - bump pkg-kde-tools build dependency to 0.9 (needed for 3.0 (quilt)).
  * Strip version numbers from KDE 4 in descriptions, remove references to
    Quasar.
  * Bump Standards-Version to 3.9.1: no changes needed.
  * Move libqimageblitz-dbg package to the bottom of debian/control.
  * Change libimageblitz-dbg section to debug.
  * Remove Matthew from Uploaders, R.I.P.
  * Change Sune's email address to @debian.org.
  * Add myself to Uploaders.
  * Update packaging copyright years in debian/copyright.
  * Strip ./ from libqimageblitz-dev.install.
  * Sort install files.
  * Add a symbol file for libqimageblitz4 (based on 0.0.4).
  * Refresh patches.
  * Remove duplicate Section fields from debian/control.
  * Add Copyright next to (C) in the statement about Debian packaging
    copyright (fixes lintian error).
  * Disable /usr/lib R(UN)PATH (patch 13_disable_usr_lib_rpath.diff).

 -- Modestas Vainius <modax@debian.org>  Sat, 18 Sep 2010 21:26:37 +0300

qimageblitz (1:0.0.4-4) unstable; urgency=low

  * Upload to unstable.
  * Move .gnu.note section for non-i386 architectures. (Closes: #479575)
