@@ -3,7 +3,7 @@ Priority: optional
 Section: libs
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Sune Vuorela <sune@debian.org>, Modestas Vainius <modax@debian.org>
-Build-Depends: debhelper (>= 7), cdbs, cmake, pkg-kde-tools (>= 0.9), libqt4-dev (>= 4.4.0~)
+Build-Depends: debhelper (>= 7), cmake, pkg-kde-tools (>= 0.11), libqt4-dev (>= 4.4.0~)
 Standards-Version: 3.9.1
 Homepage: http://www.kde.org/
 Vcs-Git: git://git.debian.org/pkg-kde/kde-req/qimageblitz.git
